# tidy-word-transcripts

./: README.md  pyproject.toml
binder/: requirements.txt
example_transcript/: transcript_format_example.docx
examples/: output.xlsx
transcript_tabulator/: convert_transcripts.ipynb  convert_transcripts.py  processor.py  uploader.py
transcript_tabulator/.ipynb_checkpoints/: convert_transcripts-checkpoint.py
